# object_detection

./: .pubignore  CHANGELOG.md  README.md  pubspec.yaml
.github/workflows/: build.yml  integration.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: pubspec.yaml
example/android/app/: build.gradle.kts
example/integration_test/: object_detection_integration_test.dart  test_helpers.dart
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/windows/: CMakeLists.txt
ios/: object_detection.podspec
ios/object_detection/: Package.swift
lib/: object_detection.dart
lib/src/: dart_registration.dart  object_detector.dart  types_and_consts.dart
linux/: CMakeLists.txt  object_detection_plugin.cc  object_detection_plugin_private.h
linux/test/: object_detection_plugin_test.cc
macos/: object_detection.podspec
macos/object_detection/: Package.swift
test/: dart_registration_test.dart  helpers_test.dart  types_and_consts_test.dart
windows/: CMakeLists.txt  object_detection_plugin.cpp  object_detection_plugin.h  object_detection_plugin_c_api.cpp  registration.cpp
windows/include/object_detection/: object_detection_plugin.h  object_detection_plugin_c_api.h
windows/test/: object_detection_plugin_test.cpp
(+18 files in other folders)
